--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 		"test:watch": "jest --watchAll"
 	},
 	"devDependencies": {
+		"@babel/cli": "7.4.3",
+		"@babel/core": "7.4.3",
+		"@babel/preset-env": "7.4.3",
 		"commitizen": "3.0.7",
 		"cz-conventional-changelog": "2.1.0",
 		"jest": "24.7.1",
@@ -16,5 +19,8 @@
 		"commitizen": {
 			"path": "cz-conventional-changelog"
 		}
+	},
+	"dependencies": {
+		"@babel/polyfill": "7.4.3"
 	}
 }
