--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"eslint-plugin-node": "8.0.1",
 		"eslint-plugin-promise": "4.1.1",
 		"eslint-plugin-standard": "4.0.0",
+		"eslint-plugin-jest": "22.4.1",
 		"jest": "24.7.1",
 		"lerna": "^3.13.2"
 	},
@@ -28,7 +29,6 @@
 		}
 	},
 	"dependencies": {
-		"@babel/polyfill": "7.4.3",
-		"eslint-plugin-jest": "22.4.1"
+		"@babel/polyfill": "7.4.3"
 	}
 }
