--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,15 @@
 		"es6": true,
 		"jest/globals": true
 	},
-	"extends": "standard",
+	"extends": [
+		"standard",
+		"plugin:promise/recommended",
+		"plugin:import/errors",
+		"plugin:import/warnings",
+		"plugin:sonarjs/recommended",
+		"plugin:unicorn/recommended",
+		"plugin:array-func/recommended"
+	],
 	"globals": {
 		"Atomics": "readonly",
 		"SharedArrayBuffer": "readonly"
@@ -13,6 +21,17 @@
 		"ecmaVersion": 2018,
 		"sourceType": "module"
 	},
-	"rules": {},
-	"plugins": ["jest"]
+	"rules": {
+		"unicorn/filename-case": 0,
+		"sort-imports": 0,
+		"import/order": 0
+	},
+	"plugins": [
+		"jest",
+		"import",
+		"sonarjs",
+		"array-func",
+		"promise",
+		"simple-import-sort"
+	]
 }
