--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
 		"cz-conventional-changelog": "2.1.0",
 		"eslint": "5.16.0",
 		"eslint-config-standard": "12.0.0",
+		"eslint-plugin-array-func": "3.1.3",
 		"eslint-plugin-import": "2.16.0",
+		"eslint-plugin-jest": "22.4.1",
+		"eslint-plugin-no-loops": "0.3.0",
 		"eslint-plugin-node": "8.0.1",
 		"eslint-plugin-promise": "4.1.1",
+		"eslint-plugin-simple-import-sort": "3.1.0",
+		"eslint-plugin-sonarjs": "0.3.0",
 		"eslint-plugin-standard": "4.0.0",
-		"eslint-plugin-jest": "22.4.1",
+		"eslint-plugin-unicorn": "8.0.2",
 		"jest": "24.7.1",
 		"lerna": "^3.13.2"
 	},
