--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "root",
+	"version": "0.0.0",
 	"private": true,
 	"scripts": {
 		"commit": "git-cz",
@@ -26,7 +27,10 @@
 		"eslint-plugin-sonarjs": "0.3.0",
 		"eslint-plugin-standard": "4.0.0",
 		"eslint-plugin-unicorn": "8.0.2",
+		"expect-more-jest": "2.4.1",
 		"jest": "24.7.1",
+		"jest-chain": "1.1.2",
+		"jest-extended": "0.11.1",
 		"lerna": "^3.13.2"
 	},
 	"config": {
