--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"private": true,
 	"scripts": {
 		"commit": "git-cz",
-		"lint": "eslint **/*.js",
+		"lint": "eslint **/*.js --fix",
 		"test": "jest ",
+		"doc": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose",
 		"test:cov": "jest --coverage",
 		"test:watch": "jest --watchAll"
 	},
@@ -31,7 +32,9 @@
 		"jest": "24.7.1",
 		"jest-chain": "1.1.2",
 		"jest-extended": "0.11.1",
-		"lerna": "3.13.2"
+		"jsdoc": "3.5.5",
+		"lerna": "3.13.2",
+		"minami": "1.2.3"
 	},
 	"config": {
 		"commitizen": {
