--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"commit": "git-cz",
 		"lint": "eslint **/*.js --fix",
 		"test": "jest ",
+		"build": "rollup -c",
 		"doc": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose",
 		"test:cov": "jest --coverage",
 		"test:watch": "jest --watchAll"
@@ -34,7 +35,11 @@
 		"jest-extended": "0.11.1",
 		"jsdoc": "3.5.5",
 		"lerna": "3.13.2",
-		"minami": "1.2.3"
+		"minami": "1.2.3",
+		"rollup": "1.10.0",
+		"rollup-plugin-babel": "4.3.2",
+		"rollup-plugin-babel-minify": "8.0.0",
+		"rollup-plugin-node-resolve": "4.2.3"
 	},
 	"config": {
 		"commitizen": {
