--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,7 @@ jobs:
       - run:
         name: Authenticate with registry
         command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
-      - run:
-          name: Publish package
-          command: npm publish
+      # Do not publish now !
+      # - run:
+      #     name: Publish package
+      #     command: npm publish --access public
