--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,13 @@
 {
-	"packages": ["packages/*"],
-	"version": "0.0.0",
+	"packages": [
+		"packages/*"
+	],
+	"version": "0.0.1",
 	"command": {
 		"publish": {
-			"ignoreChanges": ["*.md"],
+			"ignoreChanges": [
+				"*.md"
+			],
 			"message": "chore(release): publish"
 		}
 	}
