--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"lint": "eslint **/*.js --fix",
 		"test": "jest ",
 		"build": "rollup -c",
+		"bootstrap": "lerna bootstrap --hoist",
 		"doc": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose",
 		"test:cov": "jest --coverage",
 		"test:watch": "jest --watchAll"
