--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
   codecov: codecov/codecov@1.0.4
 
 commands:
-  setupRepo:
+  setup-repo:
     description: "Install dependencies, cache them, bootstrap packages"
     steps:
       # Download and cache dependencies
@@ -40,7 +40,7 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-      - setupRepo
+      - setup-repo
 
   test:
     docker:
