--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ commands:
   setup-repo:
     description: "Install dependencies, cache them, bootstrap packages"
     steps:
+      - checkout
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -39,14 +40,16 @@ jobs:
       - image: circleci/node:10.15.3
     working_directory: ~/repo
     steps:
-      - checkout
       - setup-repo
+      - run:
+          name: Build with rollup
+          command: npm run build
 
   test:
     docker:
       - image: circleci/node:10.15.3
     steps:
-      - checkout
+      - setup-repo
       - run:
           name: Lint source code
           command: npm run lint
@@ -59,7 +62,7 @@ jobs:
     docker:
       - image: circleci/node:10.15.3
     steps:
-      - checkout
+      - setup-repo
       - run:
           name: Authenticate with registry
           command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
