--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,15 +34,21 @@ jobs:
       - image: circleci/node:10.15.3
     working_directory: ~/repo
     steps:
-      - setup-repo
+      - attach_workspace:
+        at: ~/repo
+      # - setup-repo
       - run:
           name: Build with rollup
           command: npm run build
+      - persist_to_workspace:
+        root: ~/repo
+        paths: .
 
   test:
     docker:
       - image: circleci/node:10.15.3
     steps:
+
       - setup-repo
       - run:
           name: Lint source code
@@ -52,11 +58,16 @@ jobs:
           command: npm run test:cov
       - codecov/upload:
         file: { { coverage_report_filepath } }
+      - persist_to_workspace:
+        root: ~/repo
+        paths: .
   deploy:
     docker:
       - image: circleci/node:10.15.3
     steps:
-      - setup-repo
+      # - setup-repo
+      - attach_workspace:
+        at: ~/repo
       - run:
           name: Authenticate with registry
           command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
