--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,16 @@
 {
-	"packages": ["packages/*"],
-	"version": "0.0.4",
+	"packages": [
+		"packages/*"
+	],
+	"version": "0.0.5",
 	"command": {
 		"publish": {
-			"npmClientArgs": ["--access public"],
-			"ignoreChanges": ["*.md"],
+			"npmClientArgs": [
+				"--access public"
+			],
+			"ignoreChanges": [
+				"*.md"
+			],
 			"message": "chore(release): publish"
 		}
 	}
