--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,12 +64,12 @@ jobs:
       - attach_workspace:
           at: ~/repo
       - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "50:82:8e:c3:44:97:8a:7a:37:3e:e8:06:e2:65:00:4e"
       - run:
           name: Authenticate with registry
           command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
-      - run:
-          name: Set github config to allow push
-          command: git config --global user.email "elcoosp@gmail.com" && git config --global user.name "elcoosp"
       - run: 
           name: Publish all changed packages
           command: npm run publish:ci
