--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,3 +85,6 @@ workflows:
       - deploy:
           requires:
             - build
+          filters:
+            branches:
+              only: master
