--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,19 +5,10 @@
 version: 2.1
 orbs:
   codecov: codecov/codecov@1.0.4
-jobs:
-  build:
-    docker:
-      # specify the version you desire here
-      - image: circleci/node:10.15.3
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
-    working_directory: ~/project
-
+commands:
+  setup_repo:
+    description: "Install dependencies, cache them, bootstrap packages"
     steps:
       - checkout
       # Download and cache dependencies
@@ -26,12 +17,74 @@ jobs:
             - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-      - run: npm install
+      - run: 
+          name: Install dependencies
+          command: npm ci
+      - run:
+          name: Bootstrap packages
+          command: npm run bootstrap
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      - run: npm run lint
-      - run: npm run test:cov
+
+jobs:
+
+  test:
+    working_directory: ~/repo
+    docker:
+      - image: circleci/node:10.15.3
+    steps:
+      - setup_repo
+      - run:
+          name: Lint source code
+          command: npm run lint
+      - run:
+          name: Run tests and generate coverage
+          command: npm run test:cov
       - codecov/upload:
         file: { { coverage_report_filepath } }
+      - persist_to_workspace:
+          root: ~/repo
+          paths: .
+  build:
+    docker:
+      - image: circleci/node:10.15.3
+    steps:
+      - setup_repo
+      - run:
+          name: Build with rollup
+          command: npm run build
+
+  deploy:
+    docker:
+      - image: circleci/node:10.15.3
+    working_directory: ~/repo
+    steps:
+      - attach_workspace:
+          at: ~/repo
+      - checkout
+      - run:
+          name: Authenticate with registry
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
+      - run:
+          name: Set github config to allow push
+          command: git config --global user.email "elcoosp@gmail.com" && git config --global user.name "elcoosp"
+      - run: 
+          name: Publish all changed packages
+          command: npm run publish:ci
+
+workflows:
+  version: 2
+  buildTestDeploy:
+    jobs:
+      - test
+      - build:
+          requires:
+            - test
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
