--- a/lerna.json
+++ b/lerna.json
@@ -1,17 +1,11 @@
 {
-	"packages": [
-		"packages/*"
-	],
-	"version": "0.0.4",
+	"packages": ["packages/*"],
+	"version": "0.0.10",
 	"command": {
 		"publish": {
-			"npmClientArgs": [
-				"--access public"
-			],
-			"ignoreChanges": [
-				"*.md"
-			],
-			"message": "chore(release): publish"
+			"npmClientArgs": ["--access public"],
+			"ignoreChanges": ["*.md"],
+			"message": "chore(release): publish [ci skip]"
 		}
 	}
 }
