--- a/packages/primo/package.json
+++ b/packages/primo/package.json
@@ -1,12 +1,15 @@
 {
 	"name": "@rxdxx/primo",
-	"version": "0.0.4",
+	"version": "0.0.10",
 	"description": "",
 	"module": "dist/index.esm.js",
 	"main": "dist/index.cjs.js",
 	"files": [
 		"dist"
 	],
+	"publishConfig": {
+		"access": "public"
+	},
 	"author": "",
 	"license": "MIT",
 	"gitHead": "8c986837857ea3b0382e71e86ca42f6450a8e50c"
