--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,8 +71,8 @@ jobs:
           name: Set github config to allow push
           command: git config --global user.email "elcoosp@gmail.com" && git config --global user.name "elcoosp"
       - run: 
-          name: Publish all changed packages
-          command: npm run publish:ci
+          name: Deploy changed packages
+          command: npm run deploy
 
 workflows:
   version: 2
